# whisperx-audio-transcriber

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  preload_models.py  pyproject.toml  serverless_transcriber.py  transcriber.py
test_audio/: README.md
tests/: test_main.py  test_transcriber.py
